# epsud

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
backend/: Dockerfile  available.yml  main.py  prolog_handler.py  requirements.txt
backend/db/: base.py  dependencies.py  init_db.py  session.py
backend/models/: appointment.py  role.py  specialty.py  user.py
backend/routes/: user_routes.py
backend/schemas/: appointment.py  role.py  specialty.py  user.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/screens/: AsignarCita.js  Login.js  MenuUsuario.js  Register.js  VerCitas.js
